Add settings data cleanup actions and bulk delete support

--- a/frontend/pages/settings.html
+++ b/frontend/pages/settings.html
@@ -89,6 +89,12 @@
         </div>
       </form>
     </div>
+
+    <div class="settings-section">
+      <h2>Limpar Dados</h2>
+      <p class="settings-description">Apague rapidamente informações específicas da sua conta. Esta ação não pode ser desfeita.</p>
+      <div class="cleanup-grid" id="cleanup-actions"></div>
+    </div>
   </div>
 
   <script src="/js/api.js"></script>
