--- a/frontend/pages/transactions.html
+++ b/frontend/pages/transactions.html
@@ -10,7 +10,6 @@
 </head>
 <body>
   <div id="header-container"></div>
-  <div id="header-container"></div>
 
   <div class="container">
     <div class="page-header">
@@ -18,39 +17,40 @@
       <p>Gerencie suas entradas e saídas</p>
     </div>
 
-    <div class="filter-bar" style="display:flex; flex-wrap:wrap; gap:12px; align-items:flex-end;">
-      <div class="filter-group" style="display:flex; flex-direction:column; gap:4px;">
-        <label for="filter-type">Tipo</label>
-        <select id="filter-type">
-          <option value="all">Todas</option>
-          <option value="entrada">Entradas</option>
-          <option value="saida">Saídas</option>
-        </select>
-      </div>
+    <div class="filter-bar">
+      <div class="filters-grid">
+        <div class="filter-item">
+          <label for="filter-type">Tipo</label>
+          <select id="filter-type">
+            <option value="all">Todas</option>
+            <option value="entrada">Entradas</option>
+            <option value="saida">Saídas</option>
+          </select>
+        </div>
 
-      <div class="filter-group" style="display:flex; flex-direction:column; gap:4px;">
-        <label for="filter-category">Categoria</label>
-        <select id="filter-category">
-          <option value="all">Todas</option>
-        </select>
-      </div>
+        <div class="filter-item">
+          <label for="filter-category">Categoria</label>
+          <select id="filter-category">
+            <option value="all">Todas</option>
+          </select>
+        </div>
 
-      <div class="filter-group" style="display:flex; flex-direction:column; gap:4px; min-width:180px;">
-        <label for="filter-search">Busca</label>
-        <input type="text" id="filter-search" placeholder="Descrição ou categoria" />
-      </div>
+        <div class="filter-item search-item">
+          <label for="filter-search">Busca</label>
+          <input type="text" id="filter-search" placeholder="Descrição ou categoria" />
+        </div>
 
-      <div class="filter-group" style="display:flex; flex-direction:column; gap:4px;">
-        <label for="filter-start">Início</label>
-        <input type="date" id="filter-start" />
-      </div>
+        <div class="filter-item date-item">
+          <label for="filter-start">Início</label>
+          <input type="date" id="filter-start" />
+        </div>
 
-      <div class="filter-group" style="display:flex; flex-direction:column; gap:4px;">
-        <label for="filter-end">Fim</label>
-        <input type="date" id="filter-end" />
+        <div class="filter-item date-item">
+          <label for="filter-end">Fim</label>
+          <input type="date" id="filter-end" />
+        </div>
       </div>
-
-      <div class="filter-group" style="margin-left:auto;">
+      <div class="filter-actions">
         <button class="btn btn-primary" id="add-transaction-btn">+ Nova Transação</button>
       </div>
     </div>
